# kantan-image-compression

./: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: コード品質レビュー.md  今後の開発ロードマップ.md  仕様書.md
src/: App.tsx  DropZone.tsx  HistoryPanel.tsx  ResultCard.tsx  SettingsPanel.tsx  index.css  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  compress.rs  config.rs  lib.rs  main.rs  quality.rs  tools.rs
